--- a/package.json
+++ b/package.json
@@ -72,14 +72,15 @@
 		"moment": "^2.30.1",
 		"moment-timezone": "^0.5.48",
 		"mysql2": "^3.14.0",
-		"next": "15.3.1",
+		"next": "^15.3.6",
 		"next-pwa": "^5.6.0",
 		"pdfjs-dist": "^3.11.174",
 		"puppeteer-core": "^24.9.0",
-		"react": "^19.0.0",
+		"react": "^19.0.1",
 		"react-chartjs-2": "^5.3.0",
 		"react-day-picker": "^8.10.1",
-		"react-dom": "^19.0.0",
+		"react-dom": "^19.0.1",
+		"react-server-dom-webpack": "^19.0.1",
 		"react-leaflet": "^5.0.0",
 		"react-signature-canvas": "^1.1.0-alpha.2",
 		"react-to-pdf": "^2.0.1",
@@ -91,7 +92,7 @@
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
 		"eslint": "^9",
-		"eslint-config-next": "15.3.1",
+		"eslint-config-next": "^15.3.6",
 		"tailwindcss": "^4",
 		"tailwindcss-animate": "^1.0.7",
 		"tw-animate-css": "^1.2.8"
